# lighting-agent

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  findings.md  install.sh  progress.md  pyproject.toml  requirements.txt  task_plan.md
docs/: cad-layer-convention.md  rooms_example.json
docs/superpowers/plans/: 2026-05-15-phase1-cad-parsing.md
lighting_agent/: pipeline.py  schemas.py
lighting_agent/cad/: dwg_converter.py  geometry.py  parser.py  writer.py
lighting_agent/ies/: converter.py  loader.py
lighting_agent/optimizer/: checker.py  grid.py  optimizer.py
lighting_agent/radiance/: materials.py  model_builder.py  result_parser.py  runner.py
lighting_agent/reporter/: falsecolor.py  pdf_report.py
lighting_agent/utils/: checkpoint.py
tests/: conftest.py  test_cad_geometry.py  test_cad_parser.py  test_dwg_converter.py  test_ies_loader.py  test_optimizer.py  test_pipeline.py  test_radiance_builder.py
tests/fixtures/: 飞碟灯-75W.ies
